Time: 2 ms (84.19%), Space: 44.9 MB (39.68%) - LeetHub